--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,12 +1,14 @@
 $dark1: #191716;
 $dark2: #252627;
-$light1: #fbfbff;
+$light1: #f5f5fd;
 $light2: #dddde7;
 $blue: #58a4b0;
 $purple: #7353ba;
 $red: #ef233c;
 $green: #5ef38c;
 $border1: #444e5f;
+
+$font-title: 'Staatliches', Helvetica, sans-serif;
 
 @define-mixin flex-center {
   display: flex;
@@ -23,7 +25,7 @@ $border1: #444e5f;
 }
 
 @define-mixin title $size {
-  font-family: Verdana, sans-serif;
+  font-family: 'Staatliches', Verdana, sans-serif;
   font-weight: 700;
   font-size: $size;
 }
@@ -73,7 +75,7 @@ $border1: #444e5f;
   position: relative;
   &:before,
   &:after {
-    content: "";
+    content: '';
     position: absolute;
     bottom: -1px;
     width: 0px;
